tests/NormalTests/paczka1/fuzzy1/42137296.err
Error in line 3: 2GKzx S407 51,9
Error in line 7: 2GKzx S146 11,4
Error in line 5: amYLIGaUQ4 S48 72,0
Error in line 4: KtH15j S407 27,4
Error in line 29: YBfIEMLGB S347 85,65
Error in line 8: 2GKzx S407 2,3
Error in line 33: L9YBnEj S146 8,8
